--- a/src/genweb/organs/theme/scss/_edicio.scss
+++ b/src/genweb/organs/theme/scss/_edicio.scss
@@ -17,8 +17,17 @@ b.form-label {
   background-color: var(--bs-info-bg-subtle);
   border-color: var(--bs-info-border-subtle);
 
-  b.form-label {
+  label.form-label {
     font-weight: 700;
+    margin-bottom: 0rem !important;
+  }
+
+  textarea {
+    display: none !important;
+  }
+
+  div.form-text {
+    color: var(--bs-info-text-emphasis) !important;
   }
 }
 
