--- a/src/genweb/organs/theme/stylesheets/theme.css
+++ b/src/genweb/organs/theme/stylesheets/theme.css
@@ -19,12 +19,23 @@ b.form-label {
   border-color: var(--bs-info-border-subtle);
 }
 /* line 20, ../scss/_edicio.scss */
-#formfield-form-widgets-infoAfectats b.form-label,
-#formfield-form-widgets-infoAssistents b.form-label {
+#formfield-form-widgets-infoAfectats label.form-label,
+#formfield-form-widgets-infoAssistents label.form-label {
   font-weight: 700;
+  margin-bottom: 0rem !important;
+}
+/* line 25, ../scss/_edicio.scss */
+#formfield-form-widgets-infoAfectats textarea,
+#formfield-form-widgets-infoAssistents textarea {
+  display: none !important;
+}
+/* line 29, ../scss/_edicio.scss */
+#formfield-form-widgets-infoAfectats div.form-text,
+#formfield-form-widgets-infoAssistents div.form-text {
+  color: var(--bs-info-text-emphasis) !important;
 }
 
-/* line 28, ../scss/_edicio.scss */
+/* line 37, ../scss/_edicio.scss */
 body.template-signsessio #social_tags,
 body.template-excusar_assist_sessio #social_tags {
   display: none !important;
