--- a/src/genweb/organs/theme/stylesheets/theme-concat.css
+++ b/src/genweb/organs/theme/stylesheets/theme-concat.css
@@ -721,6 +721,10 @@ body.template-presentation a.icon-hover:hover {
 body.template-presentation ul.items {
   font-size: 1.75em;
 }
+/* line 22, ../scss/content/_presentation.scss */
+body.template-presentation .eines-lateral {
+  z-index: 1035;
+}
 /*! jQuery UI - v1.14.1 - 2024-10-30
 * https://jqueryui.com
 * Includes: core.css, accordion.css, autocomplete.css, menu.css, button.css, controlgroup.css, checkboxradio.css, datepicker.css, dialog.css, draggable.css, resizable.css, progressbar.css, selectable.css, selectmenu.css, slider.css, sortable.css, spinner.css, tabs.css, tooltip.css, theme.css
