[UPD] Estilos organs

--- a/src/genweb/organs/theme/scss/_generic.scss
+++ b/src/genweb/organs/theme/scss/_generic.scss
@@ -212,3 +212,17 @@ table.table-bordered {
     }
   }
 }
+
+#header { 
+
+  .navbar-nav {
+
+    .nav-item {
+      display: none;
+
+      &:first-child {
+        display: block;
+      }
+    }
+  }
+}
